Add WSL2 setup instructions to README
Include detailed steps to run the application on WSL2 using Java with optimal configurations. Also, update performance metrics for inter-trade arrival time analysis.